# tnixc-api

./: .env.example  .gitignore  Cargo.toml  README.md  bun.lockb  package.json  tsconfig.json  vercel.json
api/: current-song.rs  doc.rs  index.rs  index.ts  message.rs
public/: index.html
scripts/: transform-paths.ts
src/: app.ts  env.ts  index.ts  lib.rs
src/controllers/: homeController.ts  userController.ts
src/routes/: index.ts
src/utils/: elysia.ts  fixCtxRequest.ts  response.ts
