[package]
name = "tnixc-api"
authors = ["Tnixc <tnixxc@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "my awesome api"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = { version = "1", features = ["raw_value"] }
vercel_runtime = { version = "1.1.4" }
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
utoipa = "4.2.0"
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }

[[bin]]
name = "doc"
path = "api/doc.rs"

[[bin]]
name = "current-song"
path = "api/current-song.rs"
